test/sema/example_21.colgm
func main() {
    var x = 1.1
    var y = broadcast(x, [2])

    var z = broadcast(y, [2, 2, 2])

    var a = broadcast(z, [2, 2])
}